config/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abutsko-helloworld
  namespace: abutsko
  labels:
    app: abutsko-helloworld
spec:
  replicas: 2
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
     maxSurge: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: abutsko-helloworld
  template:
    metadata:
      labels:
        app: abutsko-helloworld
    spec:
      containers:
      - name: abutsko-helloworld
        image: registry-ci.playpit.by/helloworld-abutsko:PLACE_FOR_NEW_TAG
        ports:
        - name: abutsko-app
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /helloworld-ws
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
      imagePullSecrets:
      - name: docker-repo
