config/hello_k8s.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat-dep
  namespace: adalimayeu
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: nexus-ci.playbit.by/helloworld-adalimayeu:66

        ports:
        - name: tom-port
          containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: adalimayeu
spec:
  selector:
    app: tomcat
  ports:
  - name: tom-svc-port
    port: 8080
    targetPort: tom-port
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: adalimayeu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: adalimayeu-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-svc
          servicePort: tom-svc-port
