config/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: abutsko
  annotations:
    nginx.ingress.kubernetes.io/app-root: /helloworld-ws
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - abutsko-app.k8s.playpit.by
    secretName: abutsko-ssl-secret
  rules:
  - host: abutsko-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: abutsko-helloworld
          servicePort: abutsko-svc
