config/tomcat-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pluniov
  name: tomcat-deployment-_buildnumber_
  labels:
    app: tomcat-_buildnumber_
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-_buildnumber_
  template:
    metadata:
      labels:
        app: tomcat-_buildnumber_
    spec:
      containers:
      - name: private-reg-container
        image: registry-ci.playpit.by/helloworld-pluniov:_buildnumber_
        ports:
        - containerPort: 8080
  # imagePullSecrets:
  # - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: pluniov
  name: tomcat-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: tomcat-_buildnumber_
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: pluniov
  name: tomcat-ingress
spec:
  rules:
  - host: pluniov-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-svc
          servicePort: 8080
